Fix spacing and course weeks

--- a/app/assets/stylesheets/map/views/layout.sass
+++ b/app/assets/stylesheets/map/views/layout.sass
@@ -63,5 +63,6 @@
 
 .sya-panel--padded > *
   max-width: 400px
-  margin: auto
+  margin-left: auto
+  margin-right: auto
   animation: fade-in 0.4s
